--- a/package.json
+++ b/package.json
@@ -5,8 +5,9 @@
   "main": "index.js",
   "scripts": {
     "build": "tsc && tsc-alias",
-    "start": "npm run build && cross-env NODE_ENV=dev node dist/server.js",
-    "dev": "nodemon"
+    "start": "npm run build && node dist/index.js",
+    "dev": "nodemon",
+    "test": "jest"
   },
   "keywords": [],
   "author": "",
@@ -25,9 +26,14 @@
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.21",
     "@types/helmet": "^4.0.0",
+    "@types/jest": "^29.5.11",
     "@types/node": "^20.10.5",
+    "@types/supertest": "^6.0.2",
     "cross-env": "^7.0.3",
+    "jest": "^29.7.0",
     "nodemon": "^3.0.2",
+    "supertest": "^6.3.3",
+    "ts-jest": "^29.1.1",
     "ts-node": "^10.9.2",
     "ts-node-dev": "^2.0.0",
     "tsc-alias": "^1.8.8",
