--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,8 +18,8 @@ jobs:
       uses: docker/login-action@v1
       with:
         registry: ${{ secrets.AZURE_REGISTRY_LOGIN_SERVER }}
-        username: ${{ secrets.AZURE_REGISTRY_USERNAME }}
-        password: ${{ secrets.AZURE_REGISTRY_PASSWORD }}
+        username: ${{ secrets.AZURE_SERVICE_PRINCIPAL_ID }}
+        password: ${{ secrets.AZURE_SERVICE_PRINCIPAL_SECRET }}
 
     - name: Build and push Docker image
       uses: docker/build-push-action@v2
