--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,26 +11,31 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v2
+      - name: Checkout code
+        uses: actions/checkout@v2
 
-    - name: Login to ACR
-      uses: docker/login-action@v1
-      with:
-        registry: ${{ secrets.AZURE_REGISTRY_LOGIN_SERVER }}
-        username: ${{ secrets.AZURE_SERVICE_PRINCIPAL_ID }}
-        password: ${{ secrets.AZURE_SERVICE_PRINCIPAL_SECRET }}
+      - name: Login to ACR
+        uses: docker/login-action@v1
+        with:
+          registry: ${{ secrets.AZURE_REGISTRY_LOGIN_SERVER }}
+          username: ${{ secrets.AZURE_SERVICE_PRINCIPAL_ID }}
+          password: ${{ secrets.AZURE_SERVICE_PRINCIPAL_SECRET }}
 
-    - name: Build and push Docker image
-      uses: docker/build-push-action@v2
-      with:
-        context: .
-        push: true
-        tags: ${{ secrets.AZURE_REGISTRY_LOGIN_SERVER }}/xlr8-backend:latest
+      - name: Build and push Docker image
+        uses: docker/build-push-action@v2
+        with:
+          context: .
+          push: true
+          tags: ${{ secrets.AZURE_REGISTRY_LOGIN_SERVER }}/xlr8-backend:latest
 
-    - name: 'Deploy to Azure'
-      uses: azure/webapps-deploy@v2
-      with:
-        app-name: ${{ secrets.AZURE_WEBAPP_NAME }}
-        slot-name: 'production'
-        images: ${{ secrets.AZURE_REGISTRY_LOGIN_SERVER }}/xlr8-backend:latest
+      - name: Login to Azure
+        uses: azure/login@v1
+        with:
+          creds: ${{ secrets.AZURE_CREDENTIALS }}
+
+      - name: "Deploy to Azure"
+        uses: azure/webapps-deploy@v2
+        with:
+          app-name: ${{ secrets.AZURE_WEBAPP_NAME }}
+          slot-name: "production"
+          images: ${{ secrets.AZURE_REGISTRY_LOGIN_SERVER }}/xlr8-backend:latest
