--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,6 +24,8 @@ jobs:
 
       - name: Run tests
         run: npm test
+        env:
+          PORT: 3000
 
       - name: Login to ACR
         uses: docker/login-action@v1
